Bug 297272 - Kwin 4.8.2 does not repaint window shadow regions after closing window
Summary: Kwin 4.8.2 does not repaint window shadow regions after closing window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 4.8.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-01 22:56 UTC by Sandro Mani
Modified: 2012-04-02 10:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (744.93 KB, image/png)
2012-04-01 22:58 UTC, Sandro Mani
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sandro Mani 2012-04-01 22:56:51 UTC
After upgrade to 4.8.2, kwin does not repaint the region previously covered by the window shadow after closing a window. The problem did not occur in 4.8.1 or 4.8.0. Screenshot attached.

Version:
kde-workspace-4.8.2-1.fc18.x86_64
Comment 1 Sandro Mani 2012-04-01 22:58:24 UTC
Created attachment 70065 [details]
Screenshot
Comment 2 Thomas Lübking 2012-04-01 23:27:41 UTC
- oxygen or oxygen-transparent
- please list enabled effects:
grep -iE 'kwin4_effect_.*Enabled=true' `kde4-config --path config | cut -d":" -f1`/kwinrc | sed -e 's/kwin4_effect_//g; s/Enabled=true//g'
Comment 3 Thomas Lübking 2012-04-02 00:22:58 UTC
Nevermind, i know the source. trying to get a patch in before the official release.
Many thanks for the report.
Comment 4 Rex Dieter 2012-04-02 00:56:42 UTC
Possible, but the fix needs to be committed first. :)
Comment 5 Thomas Lübking 2012-04-02 00:58:40 UTC
(In reply to comment #4)
> Possible, but the fix needs to be committed first. :)

How's the procedure - I commit to 4.8 and someone from the release team adds it to 4.8.2?
(the patch is trivial, i just forgot to copy a function)
Comment 6 Rex Dieter 2012-04-02 01:02:10 UTC
yes.
Comment 7 Thomas Lübking 2012-04-02 01:20:43 UTC
Git commit a5c8eca4759d1aace9fc265fef2b7ebb88ca3690 by Thomas Lübking.
Committed on 02/04/2012 at 03:11.
Pushed by luebking into branch 'KDE/4.8'.

invoke padding in inherited Deleted::visibleRect()

M  +3    -0    kwin/deleted.h

http://commits.kde.org/kde-workspace/a5c8eca4759d1aace9fc265fef2b7ebb88ca3690