invoke padding in inherited Deleted::visibleRect()

BUG: 297272